--- a/pom.xml
+++ b/pom.xml
@@ -344,6 +344,18 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>artifactory</id>
+			<distributionManagement>
+				<repository>
+					<id>spring-staging</id>
+					<url>https://repo.spring.io/libs-staging-local</url>
+					<snapshots>
+						<enabled>false</enabled>
+					</snapshots>
+				</repository>
+			</distributionManagement>
+		</profile>
 	</profiles>
 
 	<repositories>
