--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.24-SNAPSHOT'
+		springVersionDefault = '5.3.26-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.4-SNAPSHOT'
+		springRetryVersion = '1.3.5-SNAPSHOT'
 		springAmqpVersion = '2.3.17-SNAPSHOT'
-		springDataCommonsVersion = '2.5.13-SNAPSHOT'
-		springDataGeodeVersion = '2.5.13-SNAPSHOT'
-		springDataJpaVersion = '2.5.13-SNAPSHOT'
-		springDataMongodbVersion = '3.2.13-SNAPSHOT'
-		springIntegrationVersion = '5.5.16-SNAPSHOT'
-		springKafkaVersion = '2.7.15-SNAPSHOT'
-		springLdapVersion = '2.3.9.BUILD-SNAPSHOT'
-		micrometerVersion = '1.8.11-SNAPSHOT'
+		springDataCommonsVersion = '2.7.8-SNAPSHOT'
+		springDataGeodeVersion = '2.7.8-SNAPSHOT'
+		springDataJpaVersion = '2.7.8-SNAPSHOT'
+		springDataMongodbVersion = '3.4.8-SNAPSHOT'
+		springIntegrationVersion = '5.5.17-SNAPSHOT'
+		springKafkaVersion = '2.9.5-SNAPSHOT'
+		springLdapVersion = '2.4.1-SNAPSHOT'
+		micrometerVersion = '1.9.8-SNAPSHOT'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
