Remove usage of deprecated maven expressions
This commit replaces the usage of `${parent.version}`
with `${project.parent.version}` to fix the following
maven warning:

```
[WARNING] The expression ${parent.version} is deprecated.
Please use ${project.parent.version} instead.
```

--- a/spring-batch-bom/pom.xml
+++ b/spring-batch-bom/pom.xml
@@ -46,22 +46,22 @@
 			<dependency>
 				<groupId>org.springframework.batch</groupId>
 				<artifactId>spring-batch-core</artifactId>
-				<version>${parent.version}</version>
+				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.batch</groupId>
 				<artifactId>spring-batch-infrastructure</artifactId>
-				<version>${parent.version}</version>
+				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.batch</groupId>
 				<artifactId>spring-batch-integration</artifactId>
-				<version>${parent.version}</version>
+				<version>${project.parent.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.batch</groupId>
 				<artifactId>spring-batch-test</artifactId>
-				<version>${parent.version}</version>
+				<version>${project.parent.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
