--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -20,7 +20,7 @@
 		<dependency>
 		  <groupId>org.springframework.batch</groupId>
 		  <artifactId>spring-batch-bom</artifactId>
-		  <version>${parent.version}</version>
+		  <version>${project.parent.version}</version>
 		  <type>pom</type>
 		  <scope>import</scope>
 		</dependency>
