Add "-parameters" to compiler arguments
This commit adds "-parameters" to the compiler
arguments to remove Spring Framework warnings
about parameter name resolution.

Resolves #4258
Related to https://github.com/spring-projects/spring-framework/pull/29531

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,9 @@
 				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
 					<release>${java.version}</release>
+					<compilerArgs>
+						<compilerArg>-parameters</compilerArg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
