--- a/.github/workflows/documentation-upload-build.yml
+++ b/.github/workflows/documentation-upload-build.yml
@@ -42,10 +42,12 @@ jobs:
           chmod 600 "$HOME/.ssh/key"
           echo "$DOCS_SSH_HOST_KEY" > "$HOME/.ssh/known_hosts"
 
-      - name: Deploy docs
+      - name: Deploy docs and xsd schemas
         env:
           DOCS_HOST: ${{ secrets.DOCS_HOST }}
           DOCS_PATH: ${{ secrets.DOCS_PATH }}
+          BATCH_SCHEMA_PATH: ${{ secrets.BATCH_SCHEMA_PATH }}
+          INTEGRATION_SCHEMA_PATH: ${{ secrets.INTEGRATION_SCHEMA_PATH }}
           DOCS_USERNAME: ${{ secrets.DOCS_USERNAME }}
         working-directory: spring-batch-docs/target
         run: |
@@ -54,3 +56,7 @@ jobs:
           scp -i $HOME/.ssh/key -r api $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$RELEASE_VERSION
           scp -i $HOME/.ssh/key -r reference $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$RELEASE_VERSION
           ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST rm current && ln -s $RELEASE_VERSION current
+          
+          unzip spring-batch-$RELEASE_VERSION-schemas.zip
+          scp -i $HOME/.ssh/key -r batch $DOCS_USERNAME@$DOCS_HOST:$BATCH_SCHEMA_PATH
+          scp -i $HOME/.ssh/key -r batch-integration $DOCS_USERNAME@$DOCS_HOST:$INTEGRATION_SCHEMA_PATH
