--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.26-SNAPSHOT'
+		springVersionDefault = '5.3.25'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.5-SNAPSHOT'
-		springAmqpVersion = '2.3.17-SNAPSHOT'
-		springDataCommonsVersion = '2.7.8-SNAPSHOT'
-		springDataGeodeVersion = '2.7.8-SNAPSHOT'
-		springDataJpaVersion = '2.7.8-SNAPSHOT'
-		springDataMongodbVersion = '3.4.8-SNAPSHOT'
-		springIntegrationVersion = '5.5.17-SNAPSHOT'
-		springKafkaVersion = '2.9.5-SNAPSHOT'
-		springLdapVersion = '2.4.1-SNAPSHOT'
-		micrometerVersion = '1.9.8-SNAPSHOT'
+		springRetryVersion = '1.3.4'
+		springAmqpVersion = '2.3.16'
+		springDataCommonsVersion = '2.7.8'
+		springDataGeodeVersion = '2.7.8'
+		springDataJpaVersion = '2.7.8'
+		springDataMongodbVersion = '3.4.8'
+		springIntegrationVersion = '5.5.16'
+		springKafkaVersion = '2.9.6'
+		springLdapVersion = '2.4.1'
+		micrometerVersion = '1.9.8'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
@@ -89,16 +89,16 @@ allprojects {
 		junitVersion = '4.13.2'
 		junitJupiterVersion = '5.8.2'
 		log4jVersion = '2.19.0'
-		mysqlVersion = '8.0.30'
+		mysqlVersion = '8.0.32'
 		mockitoVersion = '3.12.4'
-		postgresqlVersion = '42.2.26'
+		postgresqlVersion = '42.2.27'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.32.3.3'
 		woodstoxVersion = '6.2.8'
-		xmlunitVersion = '2.9.0'
-		xstreamVersion = '1.4.19'
+		xmlunitVersion = '2.9.1'
+		xstreamVersion = '1.4.20'
 		jrubyVersion = '1.7.27'
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
@@ -107,8 +107,8 @@ allprojects {
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.23.1'
 		mongoDbDriverSyncVersion='4.6.1' // used only in tests and samples
-		testcontainersVersion='1.17.3'
-		neo4jVersion='3.2.37'
+		testcontainersVersion='1.17.6'
+		neo4jVersion='3.2.39'
 	}
 
 	apply plugin: 'idea'
