--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
 		<url>https://github.com/spring-projects/spring-batch/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Bamboo</system>
-		<url>https://build.spring.io/browse/BATCH</url>
+		<system>Github Actions</system>
+		<url>https://github.com/spring-projects/spring-batch/actions</url>
 	</ciManagement>
 	<distributionManagement>
 		<snapshotRepository>
