--- a/spring-batch-bom/pom.xml
+++ b/spring-batch-bom/pom.xml
@@ -29,8 +29,8 @@
 	</issueManagement>
 
 	<ciManagement>
-		<system>Bamboo</system>
-		<url>https://build.spring.io/browse/BATCH</url>
+		<system>Github Actions</system>
+		<url>https://github.com/spring-projects/spring-batch/actions</url>
 	</ciManagement>
 
 	<licenses>
