--- a/.github/workflows/sonatype-staging-build.yml
+++ b/.github/workflows/sonatype-staging-build.yml
@@ -41,6 +41,7 @@ jobs:
 
           echo "Downloading core artifacts"
           cd ../../../../../..
+          cd nexus/org/springframework/batch/spring-batch-core/$RELEASE_VERSION
           wget $ARTIFACTORY_URL/spring-batch-core/$RELEASE_VERSION/spring-batch-core-$RELEASE_VERSION.pom
           wget $ARTIFACTORY_URL/spring-batch-core/$RELEASE_VERSION/spring-batch-core-$RELEASE_VERSION.jar
           wget $ARTIFACTORY_URL/spring-batch-core/$RELEASE_VERSION/spring-batch-core-$RELEASE_VERSION-javadoc.jar
@@ -48,6 +49,7 @@ jobs:
 
           echo "Downloading test artifacts"
           cd ../../../../../..
+          cd nexus/org/springframework/batch/spring-batch-test/$RELEASE_VERSION
           wget $ARTIFACTORY_URL/spring-batch-test/$RELEASE_VERSION/spring-batch-test-$RELEASE_VERSION.pom
           wget $ARTIFACTORY_URL/spring-batch-test/$RELEASE_VERSION/spring-batch-test-$RELEASE_VERSION.jar
           wget $ARTIFACTORY_URL/spring-batch-test/$RELEASE_VERSION/spring-batch-test-$RELEASE_VERSION-javadoc.jar
@@ -55,6 +57,7 @@ jobs:
 
           echo "Downloading integration artifacts"
           cd ../../../../../..
+          cd nexus/org/springframework/batch/spring-batch-integration/$RELEASE_VERSION
           wget $ARTIFACTORY_URL/spring-batch-integration/$RELEASE_VERSION/spring-batch-integration-$RELEASE_VERSION.pom
           wget $ARTIFACTORY_URL/spring-batch-integration/$RELEASE_VERSION/spring-batch-integration-$RELEASE_VERSION.jar
           wget $ARTIFACTORY_URL/spring-batch-integration/$RELEASE_VERSION/spring-batch-integration-$RELEASE_VERSION-javadoc.jar
