--- a/.github/workflows/continuous-inspection.yml
+++ b/.github/workflows/continuous-inspection.yml
@@ -24,6 +24,7 @@ jobs:
         run: mvn -P test-coverage verify
 
       - name: Analyse code quality with Sonar
+        if: github.repository == 'spring-projects/spring-batch'
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
