--- a/spring-batch-integration/pom.xml
+++ b/spring-batch-integration/pom.xml
@@ -79,6 +79,12 @@
 			<artifactId>spring-integration-test</artifactId>
 			<version>${spring-integration.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.mockito</groupId>
+					<artifactId>mockito-inline</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
