--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -13,6 +13,7 @@
 
 	<properties>
 		<environment>hsql</environment>
+		<java-module-name>spring.batch.samples</java-module-name>
 	</properties>
 
 	<dependencyManagement>
@@ -252,7 +253,17 @@
 					<skip>true</skip>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>${java-module-name}</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
