Add Automatic module name to MANIFEST.MF
Resolves #867

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -18,6 +18,10 @@
 		<developerConnection>git@github.com:spring-projects/spring-batch.git</developerConnection>
 	</scm>
 
+	<properties>
+		<module.name>spring.batch.core</module.name>
+	</properties>
+
 	<dependencies>
 		<!-- production dependencies -->
 		<dependency>
