--- a/spring-batch-integration/pom.xml
+++ b/spring-batch-integration/pom.xml
@@ -17,6 +17,10 @@
 		<developerConnection>git@github.com:spring-projects/spring-batch.git</developerConnection>
 	</scm>
 
+	<properties>
+		<module.name>spring.batch.integration</module.name>
+	</properties>
+
 	<dependencies>
 		<!-- production dependencies -->
 		<dependency>
@@ -167,4 +171,5 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
+
 </project>
