--- a/pom.xml
+++ b/pom.xml
@@ -61,20 +61,20 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.9-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>2.0.2-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.0.6-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.10.7-SNAPSHOT</micrometer.version>
+		<spring-framework.version>6.0.9</spring-framework.version>
+		<spring-retry.version>2.0.1</spring-retry.version>
+		<spring-integration.version>6.0.5</spring-integration.version>
+		<micrometer.version>1.10.7</micrometer.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-commons.version>3.0.6-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.6-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.6-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.7-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.5-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.0.3-SNAPSHOT</spring-ldap.version>
+		<spring-data-commons.version>3.0.6</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.6</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.6</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.7</spring-kafka.version>
+		<spring-amqp.version>3.0.4</spring-amqp.version>
+		<spring-ldap.version>3.0.3</spring-ldap.version>
 
-		<jackson.version>2.14.2</jackson.version>
+		<jackson.version>2.14.3</jackson.version>
 		<avro.version>1.9.2</avro.version> <!-- FIXME build failure with version 1.11.1 -->
 		<gson.version>2.9.1</gson.version>
 		<hibernate-core.version>6.1.7.Final</hibernate-core.version>
@@ -83,12 +83,12 @@
 		<jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
 		<jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
 		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
-		<neo4j-ogm-core.version>4.0.3</neo4j-ogm-core.version>
-		<mongodb-driver-sync.version>4.9.0</mongodb-driver-sync.version>
-		<junit-jupiter.version>5.9.2</junit-jupiter.version>
+		<neo4j-ogm-core.version>4.0.5</neo4j-ogm-core.version>
+		<mongodb-driver-sync.version>4.9.1</mongodb-driver-sync.version>
+		<junit-jupiter.version>5.9.3</junit-jupiter.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.0.5-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.0.5</micrometer-tracing.version>
 
 		<xstream.version>1.4.20</xstream.version>
 		<junit.version>4.13.2</junit.version>
@@ -99,12 +99,12 @@
 		<xmlunit.version>2.9.1</xmlunit.version>
 		<commons-io.version>2.11.0</commons-io.version>
 		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
-		<slf4j.version>2.0.6</slf4j.version>
+		<slf4j.version>2.0.7</slf4j.version>
 		<hsqldb.version>2.7.1</hsqldb.version>
 		<h2.version>2.1.214</h2.version>
-		<sqlite.version>3.40.1.0</sqlite.version>
+		<sqlite.version>3.41.2.1</sqlite.version>
 		<derby.version>10.16.1.1</derby.version>
-		<hana.version>2.15.10</hana.version>
+		<hana.version>2.16.14</hana.version>
 		<artemis.version>2.28.0</artemis.version>
 		<jaxb-core.version>4.0.2</jaxb-core.version>
 		<log4j.version>2.20.0</log4j.version>
@@ -114,16 +114,16 @@
 		<jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
 		<jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
 		<angus-mail.version>2.0.1</angus-mail.version>
-		<woodstox-core.version>6.5.0</woodstox-core.version>
+		<woodstox-core.version>6.5.1</woodstox-core.version>
 		<aspectj.version>1.9.19</aspectj.version>
-		<mysql-connector-j.version>8.0.32</mysql-connector-j.version>
-		<mariadb-java-client.version>3.1.2</mariadb-java-client.version>
-		<postgresql.version>42.5.4</postgresql.version>
+		<mysql-connector-j.version>8.0.33</mysql-connector-j.version>
+		<mariadb-java-client.version>3.1.4</mariadb-java-client.version>
+		<postgresql.version>42.6.0</postgresql.version>
 		<db2.version>11.5.8.0</db2.version>
 		<oracle.version>19.18.0.0</oracle.version>
 		<sqlserver.version>11.2.3.jre17</sqlserver.version>
 		<jtds.version>1.3.1</jtds.version>
-		<testcontainers.version>1.17.6</testcontainers.version>
+		<testcontainers.version>1.18.1</testcontainers.version>
 		<jsonassert.version>1.5.1</jsonassert.version>
 
 		<!-- samples dependencies -->
@@ -139,18 +139,18 @@
 
 		<!-- plugin versions -->
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-		<maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
-		<maven-failsafe-plugin.version>3.0.0-M9</maven-failsafe-plugin.version>
+		<maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
+		<maven-failsafe-plugin.version>3.1.0</maven-failsafe-plugin.version>
 		<maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
-		<flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
-		<maven-deploy-plugin.version>3.1.0</maven-deploy-plugin.version>
+		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
+		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
+		<maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
 		<asciidoctor-maven-plugin.version>2.2.3</asciidoctor-maven-plugin.version>
-		<maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
+		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
 		<maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
 		<maven-site-plugin.version>3.12.1</maven-site-plugin.version>
-		<maven-project-info-reports-plugin.version>3.4.2</maven-project-info-reports-plugin.version>
+		<maven-project-info-reports-plugin.version>3.4.3</maven-project-info-reports-plugin.version>
 		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
 		<spring-javaformat-maven-plugin.version>0.0.34</spring-javaformat-maven-plugin.version>
 	</properties>
