Refactor tests in spring-batch-integration
- Remove unused resources
- Fix logging libraries conflicts
- Merge duplicate data source configuration

--- a/spring-batch-integration/pom.xml
+++ b/spring-batch-integration/pom.xml
@@ -115,12 +115,24 @@
 			<artifactId>artemis-server</artifactId>
 			<version>${artemis.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>artemis-jakarta-client</artifactId>
 			<version>${artemis.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
