--- a/pom.xml
+++ b/pom.xml
@@ -61,25 +61,25 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.12-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>2.0.3-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.0.7-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.10.10-SNAPSHOT</micrometer.version>
+		<spring-framework.version>6.0.11</spring-framework.version>
+		<spring-retry.version>2.0.2</spring-retry.version>
+		<spring-integration.version>6.0.7</spring-integration.version>
+		<micrometer.version>1.10.10</micrometer.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-commons.version>3.0.9-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.9-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.9-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.10-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.8-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.0.5-SNAPSHOT</spring-ldap.version>
+		<spring-data-commons.version>3.0.9</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.9</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.9</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.10</spring-kafka.version>
+		<spring-amqp.version>3.0.8</spring-amqp.version>
+		<spring-ldap.version>3.0.5</spring-ldap.version>
 
 		<jackson.version>2.14.3</jackson.version>
 		<avro.version>1.9.2</avro.version> <!-- FIXME build failure with version 1.11.1 -->
 		<gson.version>2.9.1</gson.version>
 		<hibernate-core.version>6.1.7.Final</hibernate-core.version>
 		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
-		<jakarta.mail-api.version>2.1.1</jakarta.mail-api.version>
+		<jakarta.mail-api.version>2.1.2</jakarta.mail-api.version>
 		<jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
 		<jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
 		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
@@ -91,49 +91,49 @@
 		<jsr305.version>3.0.2</jsr305.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.1.4-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.1.4</micrometer-tracing.version>
 
 		<xstream.version>1.4.20</xstream.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
 		<hamcrest.version>2.2</hamcrest.version>
 		<assertj.version>3.24.2</assertj.version>
-		<mockito.version>5.3.1</mockito.version>
+		<mockito.version>5.5.0</mockito.version>
 		<xmlunit.version>2.9.1</xmlunit.version>
-		<commons-io.version>2.11.0</commons-io.version>
+		<commons-io.version>2.13.0</commons-io.version>
 		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
 		<slf4j.version>2.0.7</slf4j.version>
-		<hsqldb.version>2.7.1</hsqldb.version>
-		<h2.version>2.1.214</h2.version>
-		<sqlite.version>3.41.2.1</sqlite.version>
+		<hsqldb.version>2.7.2</hsqldb.version>
+		<h2.version>2.2.220</h2.version>
+		<sqlite.version>3.42.0.0</sqlite.version>
 		<derby.version>10.16.1.1</derby.version>
 		<hana.version>2.16.14</hana.version>
-		<artemis.version>2.28.0</artemis.version>
-		<jaxb-core.version>4.0.2</jaxb-core.version>
+		<artemis.version>2.30.0</artemis.version>
+		<jaxb-core.version>4.0.3</jaxb-core.version>
 		<log4j.version>2.20.0</log4j.version>
-		<hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
+		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
 		<jakarta.el-api.version>5.0.1</jakarta.el-api.version>
 		<jakarta.el.version>4.0.2</jakarta.el.version>
 		<jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
 		<jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
-		<angus-mail.version>2.0.1</angus-mail.version>
+		<angus-mail.version>2.0.2</angus-mail.version>
 		<woodstox-core.version>6.5.1</woodstox-core.version>
-		<aspectj.version>1.9.19</aspectj.version>
-		<mysql-connector-j.version>8.0.33</mysql-connector-j.version>
+		<aspectj.version>1.9.20</aspectj.version>
+		<mysql-connector-j.version>8.1.0</mysql-connector-j.version>
 		<mariadb-java-client.version>3.1.4</mariadb-java-client.version>
 		<postgresql.version>42.6.0</postgresql.version>
 		<db2.version>11.5.8.0</db2.version>
-		<oracle.version>19.18.0.0</oracle.version>
+		<oracle.version>19.20.0.0</oracle.version>
 		<sqlserver.version>11.2.3.jre17</sqlserver.version>
 		<jtds.version>1.3.1</jtds.version>
-		<testcontainers.version>1.18.1</testcontainers.version>
+		<testcontainers.version>1.19.0</testcontainers.version>
 		<jsonassert.version>1.5.1</jsonassert.version>
 
 		<!-- samples dependencies -->
 		<spring-rabbit.version>${spring-amqp.version}</spring-rabbit.version>
 		<quartz.version>2.3.2</quartz.version>
 		<prometheus_pushgateway.version>0.16.0</prometheus_pushgateway.version>
-		<groovy.version>3.0.15</groovy.version>
+		<groovy.version>3.0.19</groovy.version>
 
 		<!-- documentation dependencies -->
 		<asciidoctorj-pdf.version>1.6.2</asciidoctorj-pdf.version> <!-- FIXME build failure with version 2.3.3 -->
@@ -141,19 +141,19 @@
 		<spring-asciidoctor-backends.version>0.0.5</spring-asciidoctor-backends.version>
 
 		<!-- plugin versions -->
-		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-		<maven-surefire-plugin.version>3.1.0</maven-surefire-plugin.version>
-		<maven-failsafe-plugin.version>3.1.0</maven-failsafe-plugin.version>
+		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+		<maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
 		<maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
-		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
 		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
 		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
 		<maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
-		<asciidoctor-maven-plugin.version>2.2.3</asciidoctor-maven-plugin.version>
+		<asciidoctor-maven-plugin.version>2.2.4</asciidoctor-maven-plugin.version>
 		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
-		<maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
+		<maven-dependency-plugin.version>3.6.0</maven-dependency-plugin.version>
 		<maven-site-plugin.version>3.12.1</maven-site-plugin.version>
-		<maven-project-info-reports-plugin.version>3.4.3</maven-project-info-reports-plugin.version>
+		<maven-project-info-reports-plugin.version>3.4.5</maven-project-info-reports-plugin.version>
 		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
 		<spring-javaformat-maven-plugin.version>0.0.39</spring-javaformat-maven-plugin.version>
 	</properties>
