--- a/.github/workflows/artifactory-staging.yml
+++ b/.github/workflows/artifactory-staging.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
+        with:
+          ref: '5.0.x'
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
