--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -19,7 +19,7 @@ content:
     # Refname matching:
     # https://docs.antora.org/antora/latest/playbook/content-refname-matching/
     branches: [ main,'({5..9}).+({1..9}).x' ]
-    tags: [ 'v({5..9}).+({0..9}).+({0..9})?(-{RC,M}+({0..9}))', '!(v5.0.+({0..9})?(-{RC,M}+({0..9})))','!(v5.1.0-M1)' ]
+    tags: [ 'v({5..9}).+({0..9}).+({0..9})?(-{RC,M}+({0..9}))', '!(v5.0.+({0..9})?(-{RC,M}+({0..9})))','!(v5.1.0-M1)','!(v5.1.0-M2)' ]
     start_path: spring-batch-docs
 asciidoc:
   attributes:
