Fix documentation assembly descriptor

--- a/spring-batch-docs/pom.xml
+++ b/spring-batch-docs/pom.xml
@@ -36,7 +36,7 @@
                 <version>${maven-assembly-plugin.version}</version>
                 <configuration>
                     <descriptors>
-                        <descriptor>src/assembly/docs.xml</descriptor>
+                        <descriptor>src/assembly/javadocs.xml</descriptor>
                         <descriptor>src/assembly/schemas.xml</descriptor>
                     </descriptors>
                     <finalName>spring-batch-${project.version}</finalName>
