--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </issueManagement>
 
     <properties>
-        <io.spring.maven.antora-version>0.0.3</io.spring.maven.antora-version>
+        <io.spring.maven.antora-version>0.0.4</io.spring.maven.antora-version>
     </properties>
 
 
@@ -42,7 +42,7 @@
                     <environment>
                         <ALGOLIA_API_KEY>9d489079e5ec46dbb238909fee5c9c29</ALGOLIA_API_KEY>
                         <ALGOLIA_APP_ID>WB1FQYI187</ALGOLIA_APP_ID>
-                        <ALGOLIA_INDEX_NAME>springbatch</ALGOLIA_INDEX_NAME>
+                        <ALGOLIA_INDEX_NAME>springdocs</ALGOLIA_INDEX_NAME>
                     </environment>
                 </configuration>
             </plugin>
