Update Spring dependencies to latest snapshots

--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.29'
+		springVersionDefault = '5.3.31-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.4'
-		springAmqpVersion = '2.3.16'
-		springDataCommonsVersion = '2.7.15'
-		springDataGeodeVersion = '2.7.15'
-		springDataJpaVersion = '2.7.15'
-		springDataMongodbVersion = '3.4.15'
-		springIntegrationVersion = '5.5.18'
-		springKafkaVersion = '2.9.11'
-		springLdapVersion = '2.4.1'
-		micrometerVersion = '1.9.14'
+		springRetryVersion = '1.3.5-SNAPSHOT'
+		springAmqpVersion = '2.3.17-SNAPSHOT'
+		springDataCommonsVersion = '2.7.18-SNAPSHOT'
+		springDataGeodeVersion = '2.7.18-SNAPSHOT'
+		springDataJpaVersion = '2.7.18-SNAPSHOT'
+		springDataMongodbVersion = '3.4.18-SNAPSHOT'
+		springIntegrationVersion = '5.5.20-SNAPSHOT'
+		springKafkaVersion = '2.9.14-SNAPSHOT'
+		springLdapVersion = '2.4.2-SNAPSHOT'
+		micrometerVersion = '1.9.17-SNAPSHOT'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
